<resources>
    <string name="app_name">Mary G Talemwa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_or_username">Enter email or username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="education">Education</string>
    <string name="work_experience">Work Experience</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="tools_and_frameworks">Tools and Frameworks</string>
    <string name="logout">Logout</string>
</resources>
